# msww-variablematcher

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/shared/data/: survey_io.py
docker/tasks/match/local/: docker-compose.yml  execute
docker/tasks/match/local/run/: config.json
docker/tasks/match/remote/run/: cloud-init.yaml  execute
docker/tasks/match/shared/: config.json  pipeline.py
src/variablematcher/: __init__.py  config.py  encoder.py  matcher.py  models.py  prompts.yaml  survey.py
src/variablematcher/prompts/: __init__.py  prompt_loader.py  prompts.yaml
src/variablematcher/utils/: __init__.py  config.py  embedding.py  gemini_client.py
